--- a/HW2/HW2.tex
+++ b/HW2/HW2.tex
@@ -201,6 +201,9 @@
         \item (A+C)(AB+C')=AB+AC'
         \item W'XY+WZ=(W'+Z)(W+XY)
     \end{enumerate}
+    
+    \exists \forall
+    
       
 \end{enumerate}
 
